2005-05-06	Srinivasa Ragavan <sragavan@novell.com>

	* addressbook/gui/component/ldap-config.glade: Changed string 'login'
	* mail/evolution-mail.schemas.in.in: Rephrased photo string
	* mail/mail-config.glade: Rephrased photo string
	* ui/evolution-mail-message.xml: Changed 'From' to 'from'
	
2005-05-05  Harish Krishnaswamy  <kharish@novell.com>

	* configure.in: reset upgrade revision to 0

2005-05-04 Amish <lists@munshi.biz>
	
	* evolution-plugin.pc.in, evolution-shell.pc.in : use
	@GAL_PACKAGE@ instead of hardcoding the version. Fixes
	evolution-exchange build issues.
	
2005-04-28  Not Zed  <NotZed@Ximian.com>

	* configure.in: add an --enable-profiling arg, build the profiling
	plugin optionally as well.

2005-04-26  Harish Krishnaswamy  <kharish@novell.com>

	* configure.in : Bump version

2005-04-25  Harish Krishnaswamy  <kharish@novell.com>

	* configure.in: Bump libsoup requires.

2005-04-20  James Henstridge  <james@jamesh.id.au>

	* configure.in (EVO_SET_COMPILE_FLAGS): fix up macro so that it
	doesn't trigger configure failures with newer versions of
	pkg-config.  Fixes bug #300436.

2005-04-11  Harish Krishnaswamy  <kharish@novell.com>

	* configure.in: bump version, requires

2005-03-11  David Malcolm  <dmalcolm@redhat.com>

	* configure.in: set up DBUS_VERSION for use in the new-mail-notify
	plugin 

2005-03-31  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-29  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added "xh" to ALL_LINGUAS.

2005-03-27  Ahmad Riza H Nst  <ari@160c.afraid.org>

	* configure.in: Added id (Indonesian) to ALL_LINGUAS line.

2005-03-21  Radek Doulik  <rodo@novell.com>

	* configure.in: require gtkhmtl 3.7.0 with 3.8 package/api version

2005-03-21  Philip Van Hoof  <pvanhoof@gnome.org>

	* configure.in: Fix for #73917
	
2005-03-16  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS

2005-03-07  JP Rosevear  <jpr@novell.com>
